--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -72,7 +72,7 @@
 
             <button class="go-cart-drawer__close js-go-cart-drawer-close" aria-label="Close cart" title="Close cart">
 
-                {% render 'icon-arrow' %}
+                {% render 'icon-close' %}
 
             </button>
 
@@ -93,7 +93,7 @@
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
 
-            <small class="tax-note caption-large rte">
+            {% comment %} <small class="tax-note caption-large rte">
                 {%- if cart.taxes_included and shop.shipping_policy.body != blank -%}
                 {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
                 {%- elsif cart.taxes_included -%}
@@ -103,10 +103,10 @@
                 {%- else -%}
                 {{ 'sections.cart.taxes_and_shipping_at_checkout' | t }}
                 {%- endif -%}
-            </small>
+            </small> {% endcomment %}
 
-            <a href="/checkout/" class="button button--primary go-cart__button">
-                PROCEED TO CHECKOUT
+            <a href="/cart/" class="button button--primary go-cart__button">
+                PROCEED TO CART
             </a>
 
         </div>
