--- a/assets/go-cart.css
+++ b/assets/go-cart.css
@@ -152,7 +152,7 @@
   color: rgb(var(--color-foreground));
 }
 .go-cart-drawer__content{
-  height:calc(100% - 200px);
+  height:350px;
   overflow:hidden;
   overflow-y:scroll;
   padding:0 30px;
@@ -299,8 +299,8 @@ input.go-cart-item__quantity-number:disabled{
   display:none
 }
 .go-cart-item__quantity-button{
-  width:32px;
-  height:32px;
+  width:25px;
+  height:25px;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -334,9 +334,12 @@ button.go-cart-item__remove{
   padding: 1px;
 }
 button.go-cart-item__remove svg {
-  height: 22px;
-  width: 22px;
+  height: 25px;
+  width: 25px;
   background-color: white;
+}
+button.go-cart__proceed {
+  margin-top: 25px;
 }
 .go-cart-modal-item{
   position:relative;
