--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -105,7 +105,7 @@
                 {%- endif -%}
             </small> {% endcomment %}
 
-            <a href="/cart/" class="button button--primary go-cart__button">
+            <a href="/cart/" class="button button--primary go-cart__button go-cart__proceed">
                 PROCEED TO CART
             </a>
 
